# PointMatcherPlugin

./: .gitignore  CMakeLists.txt  README.md  outlierFilterOptions.cxx  outlierFilterOptions.h  plugin.cmake  pqShowIfBooleanIsWidgetDecorator.cxx  pqShowIfBooleanIsWidgetDecorator.h  pqShowIfStringAttributeIsWidgetDecorator.cxx  pqShowIfStringAttributeIsWidgetDecorator.h  vtkPMConversions.cxx  vtkPMConversions.h  vtkPMFixStepSamplingDataPointsFilter.cxx  vtkPMFixStepSamplingDataPointsFilter.h  vtkPMFixStepSamplingFilter.cxx  vtkPMFixStepSamplingFilter.h  vtkPMIcpFilter.cxx  vtkPMIcpFilter.h  vtkPMMaxDensityDataPointsFilter.cxx  vtkPMMaxDensityDataPointsFilter.h  vtkPMMaxDistDataPointsFilter.cxx  vtkPMMaxDistDataPointsFilter.h  vtkPMMaxDistFilter.cxx  vtkPMMaxDistFilter.h  vtkPMObservationDirectionDataPointsFilter.cxx  vtkPMObservationDirectionDataPointsFilter.h  vtkPMOrientNormalsDataPointsFilter.cxx  vtkPMOrientNormalsDataPointsFilter.h  vtkPMSurfaceNormalDataPointsFilter.cxx  vtkPMSurfaceNormalDataPointsFilter.h
autogen/: README.md  autogen_generate_files.py  autogen_generate_yaml.py  autogen_get_filenames.py  filters.yaml  vtkPM___DataPointsFilter.cxx.template  vtkPM___DataPointsFilter.xml.template
cmake/: find_python_module.cmake  vtkPMAutoGen.cmake
python/: autogen_get_filenames.py  filter.yaml  generate_datafilters_source_files.py  vtkPM___DataPointsFilter.cxx.template  vtkPM___DataPointsFilter.h.template  vtkPM___DataPointsFilter.xml.template
ui/pqIcpPropertyWidget/: impossibleoptionexception.cpp  impossibleoptionexception.h  main.cpp  outlierfilteroptions.cpp  outlierfilteroptions.h  pqIcpPropertyWidget.cxx  pqIcpPropertyWidget.h  pqIcpPropertyWidget.pro  pqIcpPropertyWidget.ui
ui/pqOutlierFilterListWidget/: main.cpp  pqOutlierFilterListWidget.cpp  pqOutlierFilterListWidget.h  pqOutlierFilterListWidget.pro  pqOutlierFilterListWidget.ui
xml/: PointMatcherFiltersGUI.xml  vtkPMFixStepSamplingDataPointsFilter.xml  vtkPMFixStepSamplingFilter.xml  vtkPMIcpFilter.xml  vtkPMMaxDensityDataPointsFilter.xml  vtkPMMaxDistDataPointsFilter.xml  vtkPMMaxDistFilter.xml  vtkPMObservationDirectionDataPointsFilter.xml  vtkPMOrientNormalsDataPointsFilter.xml  vtkPMSurfaceNormalDataPointsFilter.xml
